# GHZ_numeric

./: CMakeLists.txt  README.md
include/: Coords.hpp  Corrector.hpp  EigenTeukNumTraits.hpp  EllipticIntegrals.hpp  GHPScalars.hpp  GhzTypes.hpp  HeldScalars.hpp  KerrMetric.hpp  KerrMetricBL.hpp  KerrMetricIngoing.hpp  KerrMetricOutgoing.hpp  KerrOrbit.hpp  KerrParams.hpp  KinnersleyTetrad.hpp  MathMacros.hpp  Metric.hpp  SpectralSolverS2.hpp  SpectralSolverS2boost.hpp  SpinCoeffsNP.hpp  Tetrads.hpp  TeukTypes.hpp  Vectors.hpp  VectorsGHZ.hpp  WeylScalars.hpp
src/: Coords.cpp  GHPScalars.cpp  HeldScalars.cpp  KerrMetric.cpp  KerrMetricBL.cpp  KerrMetricIngoing.cpp  KerrMetricOutgoing.cpp  KerrOrbit.cpp  KerrParams.cpp  KinnersleyTetrad.cpp  SpectralSolverS2.cpp  SpectralSolverS2boost.cpp  SpinCoeffNP.cpp  Tetrads.cpp  Vectors.cpp  WeylScalars.cpp
